--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "scar-add-metadata-toolbox"
 version = "0.0.0"
 license = "OGL-UK-3.0"
-description = "Python library for generating SCAR Antarctic Digital Database metadata records"
+description = "Editor, repository and data catalogue for SCAR Antarctic Digital Database (ADD) discovery metadata"
 authors = [
     "Felix Fennell <felnne@bas.ac.uk>"
 ]
@@ -22,7 +22,7 @@ packages = [
 
 [tool.poetry.dependencies]
 awscli = "^1.18.93"
-bas-metadata-library = {url = "http://bsl-repoa.nerc-bas.ac.uk/magic/v1/projects/metadata-library/latest/dist/bas_metadata_library-0.0.0-py3-none-any.whl"}
+bas-metadata-library = "^0.3.0"
 bas-style-kit-jinja-templates = "^0.5.0"
 click-spinner = "^0.1.10"
 Faker = "^4.1.1"
@@ -33,7 +33,7 @@ inquirer = "^2.7.0"
 Markdown = "^3.2.2"
 msal = "^1.4.1"
 OWSLib = "^0.19.2"
-python = "^3.8"
+python = "^3.6"
 python-dateutil = "^2.8.1"
 python-dotenv = "^0.10.3"
 requests = "^2.24.0"
@@ -41,14 +41,18 @@ sentry-sdk = {version = "^0.14.3", extras = ["flask"]}
 simplejson = "^3.17.0"
 str2bool = "^1.1"
 tabulate = "^0.8.7"
-# BAS Metadata Library - to pin version of indirect dependencies
-lxml = {url = "http://bsl-repoa.nerc-bas.ac.uk/magic/v1/libraries/python/wheels/linux_x86_64/cp38m/lxml-4.5.0-cp38-cp38-linux_x86_64.whl"}
-# OWSlib dependencies - to pin version of indirect dependencies
-pyproj = {url = "http://bsl-repoa.nerc-bas.ac.uk/magic/v1/libraries/python/wheels/linux_x86_64/cp38m/pyproj-2.6.0-cp38-cp38-linux_x86_64.whl"}
-# optional PyCSW dependencies
+# BAS Metadata Library dependency - to pin version of indirect dependencies
+lxml = "4.5.2"
+# OWSlib dependency - to pin version of indirect dependencies
+pyproj = "2.6.0"
 pycsw = "^2.4.2"
+# optional PyCSW dependencies
 psycopg2-binary = "^2.8.5"
 SQLAlchemy = "^1.3.18"
+# python 3.6 backports
+importlib_metadata = "^1.7.0"
+importlib_resources = "^3.0.0"
+backports-datetime-fromisoformat = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
@@ -61,7 +65,7 @@ tomlkit = "^0.6.0"
 
 [tool.black]
 line-length = 120
-target-version = ['py38']
+target-version = ['py36']
 include = '\.pyi?$'
 exclude = ''
 
