--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,41 @@
 ---
-  version: "2"
+version: "2"
 
-  services:
-    app:
-      build: .
-      image: docker-registry.data.bas.ac.uk/magic/add-metadata-toolbox:latest
-      command: flask run --host 0.0.0.0 --port 9000
-      volumes:
-        - .:/usr/src/app
-      environment:
-        - AWS_ACCESS_KEY_ID
-        - AWS_SECRET_ACCESS_KEY
-      ports:
-        - 9000:9000
-      depends_on:
-        - db
+services:
+  app:
+    build: .
+    image: docker-registry.data.bas.ac.uk/magic/add-metadata-toolbox:latest
+    command: flask run --host 0.0.0.0 --port 9000
+    volumes:
+      - .:/usr/src/app
+    ports:
+      - 9000:9000
+    depends_on:
+      - db
 
-    app-cli:
-      image: docker-registry.data.bas.ac.uk/magic/add-metadata-toolbox:latest
-      command: ash
-      volumes:
-        - .:/usr/src/app
-      environment:
-        - AWS_ACCESS_KEY_ID
-        - AWS_SECRET_ACCESS_KEY
-      depends_on:
-        - app
+  app-cli:
+    image: docker-registry.data.bas.ac.uk/magic/add-metadata-toolbox:latest
+    command: ash
+    volumes:
+      - .:/usr/src/app
+    environment:
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - APP_AUTH_SESSION_FILE_PATH=/usr/src/app/auth.json
+    depends_on:
+      - app
 
-    db:
-      image: postgis/postgis:12-3.0-alpine
-      environment:
-        POSTGRES_PASSWORD: password
-      ports:
-        - "5432:5432"
+  db:
+    image: postgis/postgis:12-3.0-alpine
+    environment:
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
 
-    web:
-      image: nginx:alpine
-      volumes:
-        - ./support/nginx/default.conf:/etc/nginx/conf.d/default.conf
-        - ./_site/:/usr/share/nginx/html/public/
-      ports:
-        - "9001:9001"
+  web:
+    image: nginx:alpine
+    volumes:
+      - ./support/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./_site/:/usr/share/nginx/html/public/
+    ports:
+      - "9001:9001"
