--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ tabulate = "^0.8.7"
 lxml = "4.5.2"
 # OWSlib dependency - to pin version of indirect dependencies
 pyproj = "2.6.0"
-pycsw = "^2.4.2"
+pycsw = "^2.6.0"
 # optional PyCSW dependencies
 psycopg2-binary = "^2.8.5"
 SQLAlchemy = "^1.3.18"
@@ -56,7 +56,8 @@ backports-datetime-fromisoformat = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
-bandit = "^1.6.2"
+# Bandit version constrained due to https://github.com/PyCQA/bandit/issues/657
+bandit = "^1.6.2, < 1.6.3"
 pytest = "^5.3.2"
 pytest-cov = "^2.8.1"
 pytest-flask = "^0.15.0"
